--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,11 +2,11 @@
 <article id="chat-app">
 	<h2>Welcome to Chic Chat</h2>
 	<ul id="message-list">
-		<li><span class="name">Name</span>: Hello!</li>
-		<li><span class="name">Name</span>: Hello!</li>
-		<li><span class="name">Name</span>: Hello!</li>
-		<li><span class="name">Name</span>: Hello!</li>
-		<li><span class="name">Name</span>: Hello!</li>
+		<li><span>Name</span>: Hello!</li>
+		<li><span>Name</span>: Hello!</li>
+		<li><span>Name</span>: Hello!</li>
+		<li><span>Name</span>: Hello!</li>
+		<li><span>Name</span>: Hello!</li>
 	</ul>
 	<form id="create-message" action="/send">
 		<label for="message">Enter a message</label>
