--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,19 @@
-<h1>{{title}}</h1>
-<article id="chat-app">
-	<h2>Welcome to Chic Chat</h2>
-	<ul id="message-list">
+<header>
+	<h1>{{title}}</h1>
+</header>
+<main>
+	<ul id="messages">
 		<li><span>Name</span>: Hello!</li>
 		<li><span>Name</span>: Hello!</li>
 		<li><span>Name</span>: Hello!</li>
 		<li><span>Name</span>: Hello!</li>
 		<li><span>Name</span>: Hello!</li>
 	</ul>
+</main>
+<footer>
 	<form id="create-message" action="/send">
-		<label for="message">Enter a message</label>
+		<label for="message">Type Message</label>
 		<input type="text" name="message">
 		<input type="submit" name="send" value="Send">
 	</form>
-</article>
+</footer>
