--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,9 +119,44 @@ sup {
 sub {
   vertical-align: sub; }
 
+html {
+  font-size: 16px; }
+
 body {
-  padding: 2.5%;
-  font-family: "Helvetica Neue"; }
+  height: 100vh;
+  width: 100vw;
+  font-family: "Roboto"; }
+
+header {
+  height: 68px;
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px #FF2F2F solid;
+  box-shadow: 0 0 8px #989898;
+  font-family: "Playfair Display";
+  font-size: 1.875rem;
+  font-style: italic;
+  font-weight: 700;
+  text-align: center;
+  padding-top: .85rem;
+  padding-bottom: .35rem;
+  position: fixed;
+  top: 0; }
+
+main {
+  margin-top: 68px;
+  margin-bottom: 81px; }
+
+footer {
+  height: auto;
+  width: 100%;
+  padding-bottom: 1rem;
+  background-color: white;
+  border-top: 1px #989898 solid;
+  box-shadow: 0 0 8px #989898;
+  font-weight: 700;
+  position: fixed;
+  bottom: 0; }
 
 a {
   color: #00B7FF; }
@@ -129,26 +164,20 @@ a {
 h1 {
   margin-bottom: 1rem; }
 
-input {
-  font: inherit;
-  width: 100%; }
-
-input[type="Submit"] {
-  cursor: pointer;
-  display: block;
-  border: 0; }
-  input[type="Submit"]:hover {
-    background-color: aquamarine; }
-
-ul {
+#messages {
   list-style: none;
-  line-height: 2; }
-
-#message-list {
+  line-height: 2;
   width: 100%;
   margin: auto; }
+  #messages li {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-bottom: 1px #D8D8D8 solid; }
+    #messages li:nth-of-type(odd) {
+      background-color: #F6F6F6; }
 
-#message-list .name {
+#messages span {
   font-weight: 700; }
 
 #create-message {
@@ -161,10 +190,35 @@ ul {
   padding-top: 1rem;
   margin-bottom: .5rem; }
 
-.item {
-  margin: 10px 0;
-  padding: 5px;
-  background: #95a5a6;
-  border: 1px solid black; }
+input {
+  font: inherit;
+  width: 100%;
+  padding: 0; }
+
+input[type="Text"] {
+  cursor: text;
+  height: 2rem;
+  width: 50%;
+  float: left;
+  border: 1px #D8D8D8 solid;
+  border-radius: 0;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px; }
+  input[type="Text"]:focus, input[type="Text"]:active {
+    outline: 0;
+    box-shadow: 0 0 8px #D8D8D8 inset; }
+
+input[type="Submit"] {
+  height: 2rem;
+  width: 50%;
+  float: left;
+  cursor: pointer;
+  display: block;
+  background-color: #D8D8D8;
+  border: 0;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px; }
+  input[type="Submit"]:hover {
+    box-shadow: 0 0 8px #989898 inset; }
 
 /*# sourceMappingURL=style.css.map */
