--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,11 +3,21 @@
 </header>
 <main>
 	<ul id="messages">
-		<li><span>Name</span>: Hello!</li>
-		<li><span>Name</span>: Hello!</li>
-		<li><span>Name</span>: Hello!</li>
-		<li><span>Name</span>: Hello!</li>
-		<li><span>Name</span>: Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
+		<li><h3>JM Redding</h3>Hello!</li>
 	</ul>
 </main>
 <footer>
