--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,94 +123,118 @@ html {
   font-size: 16px; }
 
 body {
-  height: 100vh;
-  width: 100vw;
-  font-family: "Roboto"; }
+  font-family: "Roboto";
+  font-size: 1rem; }
 
 header {
-  height: 68px;
-  width: 100%;
-  background-color: white;
-  border-bottom: 1px #FF2F2F solid;
-  box-shadow: 0 0 8px #989898;
   font-family: "Playfair Display";
   font-size: 1.875rem;
   font-style: italic;
   font-weight: 700;
-  text-align: center;
-  padding-top: .85rem;
-  padding-bottom: .35rem;
-  position: fixed;
-  top: 0; }
-
-main {
-  margin-top: 68px;
-  margin-bottom: 81px; }
-
-footer {
-  height: auto;
-  width: 100%;
-  padding-bottom: 1rem;
-  background-color: white;
-  border-top: 1px #989898 solid;
-  box-shadow: 0 0 8px #989898;
-  font-weight: 700;
-  position: fixed;
-  bottom: 0; }
-
-a {
-  color: #00B7FF; }
-
-h1 {
-  margin-bottom: 1rem; }
-
-#messages {
-  list-style: none;
-  line-height: 2;
-  width: 100%;
-  margin: auto; }
-  #messages li {
-    display: block;
-    width: 100%;
-    height: auto;
-    border-bottom: 1px #D8D8D8 solid; }
-    #messages li:nth-of-type(odd) {
-      background-color: #F6F6F6; }
-
-#messages span {
-  font-weight: 700; }
-
-#create-message {
-  width: 100%;
-  margin: auto; }
-
-#create-message label {
-  line-height: 1.4;
-  display: block;
-  padding-top: 1rem;
-  margin-bottom: .5rem; }
+  text-align: center; }
 
 input {
   font: inherit;
   width: 100%;
   padding: 0; }
 
-input[type="Text"] {
+h3 {
+  font-size: 0.8125rem;
+  font-weight: 400;
+  color: #989898;
+  margin-bottom: .25rem; }
+
+label[for="message"] {
+  font-size: 0.8125rem;
+  font-weight: 400;
+  line-height: 1.1875;
+  display: block;
+  margin-bottom: .25rem; }
+
+body {
+  height: 100%;
+  width: 100%;
+  max-width: 768px;
+  margin: auto;
+  z-index: 20; }
+
+body > header, #messages li, body > footer {
+  padding-left: 1rem;
+  padding-right: 1rem; }
+
+header {
+  background-color: white;
+  border-bottom: 0.0625rem #FF2F2F solid;
+  box-shadow: 0 0 0.5rem #7B7B7B;
+  padding-top: 1.15rem;
+  padding-bottom: 1.15rem;
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  height: 4.188rem;
+  width: 100%;
+  max-width: 768px; }
+
+main {
+  min-height: 100%;
+  padding-top: 4.188rem;
+  padding-bottom: 4.75rem;
+  z-index: 0; }
+
+footer {
+  padding-bottom: 1rem;
+  background-color: white;
+  border-top: 0.0625rem #989898 solid;
+  box-shadow: 0 0 0.5rem #7B7B7B;
+  font-weight: 700;
+  z-index: 1;
+  position: fixed;
+  bottom: 0;
+  height: 4.75rem;
+  width: 100%;
+  max-width: 768px; }
+
+#messages {
+  list-style: none;
+  width: 100%;
+  margin: auto; }
+  #messages li {
+    display: block;
+    width: 100%;
+    height: auto;
+    padding-top: 0.5rem;
+    padding-bottom: 0.625rem;
+    line-height: 1.1875;
+    border-bottom: 1px #D8D8D8 solid; }
+    #messages li:nth-of-type(odd) {
+      background-color: #F6F6F6; }
+
+#create-message {
+  font-weight: 400;
+  width: 100%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.625rem; }
+
+input {
+  margin: 0; }
+
+input[type="text"] {
+  padding-left: 0.25rem;
   cursor: text;
   height: 2rem;
-  width: 50%;
+  width: 75%;
   float: left;
   border: 1px #D8D8D8 solid;
   border-radius: 0;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px; }
-  input[type="Text"]:focus, input[type="Text"]:active {
+  input[type="text"]:focus, input[type="text"]:active {
     outline: 0;
     box-shadow: 0 0 8px #D8D8D8 inset; }
 
-input[type="Submit"] {
+input[type="submit"] {
   height: 2rem;
-  width: 50%;
+  width: 25%;
   float: left;
   cursor: pointer;
   display: block;
@@ -218,7 +242,7 @@ input[type="Submit"] {
   border: 0;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px; }
-  input[type="Submit"]:hover {
+  input[type="submit"]:hover {
     box-shadow: 0 0 8px #989898 inset; }
 
 /*# sourceMappingURL=style.css.map */
